# AgarosePlateStamper

./: .gitignore  .readthedocs.yaml  AgarosePlateInsert.py  README.md  Topper_Frame_NoBrim_v1.4.stl  pyproject.toml  requirements.txt
docs/: api.rst  conf.py  index.rst  requirements.in  requirements.txt  usage.rst
docs/developer/: api.rst  index.rst
docs/user/: gui_guide.rst  index.rst  protocol.rst
platestamper/: __init__.py  generator.py  gui_utils.py
src/AgarosePlateStamper/: __init__.py  gui_utils.py
src/platestamper/: generator.py
stls/: Frame.stl
